// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockTokensRow should render with isReady = false 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="css-1bqsw5h"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="css-31so1s"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1bel921"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Locked
                </span>
                <div
                  class="mr-3 ml-2 text-theme-secondary-700 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    lock.svg
                  </svg>
                </div>
              </div>
              <input
                class="css-7i915u"
                color="success"
                disabled=""
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UnlockTokensRow should render with isReady = true 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="css-1bqsw5h"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="css-31so1s"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1bel921"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Unlockable
                </span>
                <div
                  class="mr-3 ml-2 text-theme-primary-600 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    unlock-token.svg
                  </svg>
                </div>
              </div>
              <input
                checked=""
                class="css-7i915u"
                color="success"
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
